codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__custom_model_display_name_quick_picker.snap
---
source: tui/src/chatwidget/tests/model_display_name_tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
  选 择 模 型
  选 择 快 速 自 动 模 式 或 浏 览 所 有 模 型 。

  1. Auto Fast         Custom provider model
› 2. 所 有 模 型 （ 当 前 ）   选 择 特 定 模 型 和 推 理 级 别 （ 当 前 ： GPT-5.6 Luna）

  按  enter 确 认 ， 或 按  esc 返 回
