codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__esc_interrupt_goal_paused_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: snapshot
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  GPT-5.6-Sol 默认 · /tmp/project                   目标已暂停（/goal resume）  " Hidden by multi-width symbols: [(15, " "), (17, " "), (53, " "), (55, " "), (57, " "), (59, " "), (61, " "), (63, " "), (77, " ")]
