codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exec_approval_history_decision_aborted_multiline.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: lines_to_single_string(&aborted_multi)
---
✗ 你已取消运行以下命令的请求：echo line1 ...
